# attensors

./: LICENSE  README.md  pyproject.toml
attensors/: __init__.py  attensors.py  tensors.py
attrtensors/: attrtensors.py
