[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attensors"
dynamic = ["version"]
description = 'Using attrs and numpy to define clear data structures with multiple tensors'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["attribute","tensor"]
authors = [
  { name = "Sergiu Turlea", email = "sergiu.turlea@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development",
  "Typing :: Typed"
]
dependencies = [
  "attrs>=21.3.0",
  "numpy>=1.20.1"
]

[project.urls]
Documentation = "https://github.com/Optimal-Play/attensors#readme"
Issues = "https://github.com/Optimal-Play/attensors/issues"
Source = "https://github.com/Optimal-Play/attensors"

[tool.hatch.version]
path = "attensors/__init__.py"
